--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Config
 config.py
+
+# Datasets - exclude large datasets but keep samples
+data/
+datasets/
+!data/samples/
+!datasets/samples/
+
+# Logs and temporary files
+*.log
+.DS_Store
