Got the training working, but there is an error with the losses

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ datasets/
 # Logs and temporary files
 *.log
 .DS_Store
+
+# Repository structure files
+flattened_repo.txt
+repo_structure.yaml
+
+# Model checkpoints
+checkpoints/
