--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-torch>=1.7.0
-torchvision>=0.8.0
-segmentation-models-pytorch==0.3.0
-albumentations==0.4.3
-catalyst==20.12
-wandb
-tensorboard
-numpy>=1.16.4
-pillow>=7.1.2
-opencv-python>=4.1.1
-scikit-image>=0.11.0
-tqdm>=4.33.0
-matplotlib>=3.0.0
+torch>=2.0.0
+torchvision>=0.15.0
+segmentation-models-pytorch>=0.3.0
+albumentations>=1.3.0
+numpy<2.0.0
+imgaug>=0.4.0
+opencv-python>=4.7.0
+pillow>=9.3.0
+tqdm>=4.64.1
+tensorboard>=2.11.0
+scikit-learn>=1.1.3
+matplotlib>=3.6.2
 pandas>=1.0.0
+wandb
